# solana-validator-switch

./: .eslintrc.json  .gitignore  ALERT_BEHAVIOR_SUMMARY.md  ALERT_IMPLEMENTATION_SUMMARY.md  ALERT_THRESHOLD_UPDATE.md  AUTO_FAILOVER_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  PRE_COMMIT_MATCH.md  README.md  REFACTORING.md  RELEASE.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.3.1.md  SECURITY.md  TELEGRAM_BOT_IMPLEMENTATION.md  TEST_COVERAGE_SUMMARY.md  TEST_SUMMARY.md  WIKI.md  config.example.yaml  config.yaml.example  example_config.json  install.sh  jest.config.js  package-lock.json  package.json  refresh_debugging.md  setup-hooks.sh  test_refresh.md  test_status.sh  test_telegram_fix.sh  test_telegram_simple.sh  test_telegram_view.sh  tsconfig.json  vote_credits.txt
.cursor/rules/: general-rules.mdc  svs-rules.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: cli-ux-spec-simplified.md  svs_project_plan.md  technical-specs-updated.md
scripts/: create-release.sh
src/: alert.rs  alert_integration_tests.rs  alert_logic_tests.rs  alert_tests.rs  auto_failover_tests.rs  config.rs  emergency_failover.rs  executable_utils.rs  index.ts  main.rs  solana_rpc.rs  ssh.rs  ssh_async.rs  ssh_key_detector.rs  startup.rs  startup_checks.rs  startup_logger.rs  startup_validation_tests.rs  status_ui_alert_tests.rs  switch_validation_tests.rs  types.rs  validator_metadata.rs  validator_rpc.rs
src/commands/: config.rs  config.ts  error_handler.rs  health.ts  mod.rs  monitor.ts  setup.rs  setup.ts  status.rs  status.ts  status_ui.rs  status_ui_v2.rs  switch.rs  switch.ts  switch_scenarios_test.rs  switch_test.rs  switch_ux_test.rs  test_alert.rs  version.ts
src/lib/: health-checker.ts  node-detector.ts  ssh-manager.ts
src/types/: config.ts  index.ts  ssh.ts
src/utils/: config-manager.ts  error-handler.ts  logger.ts  ssh-diagnostics.ts  ssh-key-detector.ts  validator.ts
tests/: README.md  TEST_SCENARIOS.md  integration_test.rs  setup.ts  test_config.yaml
tests/commands/: config.integration.test.ts
tests/utils/: config-manager.test.ts  ssh-key-detector.test.ts  validator.test.ts
wiki/: Configuration.md  FAQ.md  Home.md  Installation.md  Telegram-Alerts.md  Usage.md
