[package]
name = "solana-validator-switch"
version = "1.0.0"
edition = "2021"
description = "Interactive CLI tool for Solana validator switching and management"
authors = ["huisky <huiskylabs@gmail.com>"]

[[bin]]
name = "svs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"
comfy-table = "7.1"
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
crossterm = "0.27"
indicatif = "0.17"
colored = "2.0"
dirs = "5.0"
figlet-rs = "0.1.5"
url = "2.5.4"
