[package]
name = "solana-validator-switch"
version = "1.0.0"
edition = "2021"
description = "Professional-grade CLI tool for ultra-fast Solana validator switching"
authors = ["huisky <huiskylabs@gmail.com>"]
license = "MIT"
repository = "https://github.com/huiskylabs/solana-validator-switch"
homepage = "https://github.com/huiskylabs/solana-validator-switch"
readme = "README.md"
keywords = ["solana", "validator", "cli", "blockchain", "devops"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "svs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"
comfy-table = "7.1"
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
crossterm = "0.27"
indicatif = "0.17"
colored = "2.0"
dirs = "5.0"
figlet-rs = "0.1.5"
url = "2.5.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
bs58 = "0.5"
